--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2192,16 +2192,16 @@ body {
   padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-.cid-qFoQSYXSf4 {
+.cid-qFE4tYeavT {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: url("../../../assets/images/1514728630457-10-1920x1080.jpg");
+  background: url("../../../assets/images/heaven-wallpapers-2000x1250.jpg");
 }
-.cid-qFoQSYXSf4 .mbr-section-subtitle {
-  color: #ffffff;
+.cid-qFE4tYeavT .mbr-section-subtitle {
+  color: #767676;
   font-weight: 300;
 }
-.cid-qFoQSYXSf4 .number-wrap {
+.cid-qFE4tYeavT .number-wrap {
   color: #ffffff;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
@@ -2213,77 +2213,73 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-qFoQSYXSf4 .number {
+.cid-qFE4tYeavT .number {
   font-style: normal;
   font-weight: 700;
-  font-size: 55px;
   text-transform: none;
   letter-spacing: -2px;
+  font-size: 55px;
   word-spacing: 0;
   line-height: 1.3;
   color: #ffffff;
 }
-.cid-qFoQSYXSf4 .period {
+.cid-qFE4tYeavT .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-qFoQSYXSf4 .dot {
+.cid-qFE4tYeavT .dot {
   position: absolute;
   top: -10px;
   right: -1em;
   width: 1em;
   display: block;
+  font-size: 55px;
   height: 83%;
   overflow: hidden;
   font-style: normal;
   font-weight: 700;
-  font-size: 55px;
   line-height: 89.65px;
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
   color: #ffffff;
 }
-.cid-qFoQSYXSf4 .countdown-cont {
+.cid-qFE4tYeavT .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #c8ceaf);
   max-width: 700px;
+  border-radius: 3px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-qFoQSYXSf4 .dot {
+  .cid-qFE4tYeavT .dot {
     display: none;
   }
 }
 @media (max-width: 543px) {
-  .cid-qFoQSYXSf4 .number-wrap {
+  .cid-qFE4tYeavT .number-wrap {
     margin-bottom: 15px;
   }
 }
 @media (max-width: 550px) {
-  .cid-qFoQSYXSf4 .col-xs-3 {
+  .cid-qFE4tYeavT .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
   }
-  .cid-qFoQSYXSf4 .number-wrap {
+  .cid-qFE4tYeavT .number-wrap {
     min-width: auto;
   }
 }
 @media (max-width: 440px) {
-  .cid-qFoQSYXSf4 .number,
-  .cid-qFoQSYXSf4 .dot {
+  .cid-qFE4tYeavT .number,
+  .cid-qFE4tYeavT .dot {
     font-size: 40px;
   }
 }
 @media (max-width: 380px) {
-  .cid-qFoQSYXSf4 .period {
+  .cid-qFE4tYeavT .period {
     font-size: 0.8rem;
   }
-}
-.cid-qFoQSYXSf4 H2 {
-  color: #ffffff;
-}
-.cid-qFoQSYXSf4 B {
-  color: #ffffff;
 }
 .cid-qF7fAPdN5C .navbar {
   padding: .5rem 0;
