--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -49,10 +49,10 @@ body {
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -648,13 +648,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 .form-control,
 .form-control:focus {
@@ -1801,7 +1801,7 @@ body {
 .cid-qFiErk3lTo .mbr-section-title {
   color: #ffffff;
 }
-.cid-qFe08KTsPp {
+.cid-qFGruUjSm0 {
   padding-top: 15px;
   padding-bottom: 30px;
   background-color: #2e2e2e;
@@ -2280,192 +2280,6 @@ body {
   .cid-qFE4tYeavT .period {
     font-size: 0.8rem;
   }
-}
-.cid-qFE6l44ljf {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background: url("../../../assets/images/1514728630457-10-1920x1080.jpg");
-}
-.cid-qFE6l44ljf .mbr-section-subtitle {
-  color: #ffffff;
-  font-weight: 300;
-}
-.cid-qFE6l44ljf .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-qFE6l44ljf .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-qFE6l44ljf .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-qFE6l44ljf .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-qFE6l44ljf .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qFE6l44ljf .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-qFE6l44ljf .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-qFE6l44ljf .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-qFE6l44ljf .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-qFE6l44ljf .number,
-  .cid-qFE6l44ljf .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-qFE6l44ljf .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-qFE6l44ljf H2 {
-  color: #ffffff;
-}
-.cid-qFE6l44ljf B {
-  color: #ffffff;
-}
-.cid-qFE6l7tVeH {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background: url("../../../assets/images/1514728630457-8-1920x1080.jpg");
-}
-.cid-qFE6l7tVeH .mbr-section-subtitle {
-  color: #ffffff;
-  font-weight: 300;
-}
-.cid-qFE6l7tVeH .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-qFE6l7tVeH .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-qFE6l7tVeH .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-qFE6l7tVeH .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-qFE6l7tVeH .countdown-cont {
-  max-width: 700px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qFE6l7tVeH .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-qFE6l7tVeH .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-qFE6l7tVeH .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-qFE6l7tVeH .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-qFE6l7tVeH .number,
-  .cid-qFE6l7tVeH .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-qFE6l7tVeH .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-qFE6l7tVeH H2 {
-  color: #ffffff;
-}
-.cid-qFE6l7tVeH B {
-  color: #ffffff;
 }
 .cid-qF7fAPdN5C .navbar {
   padding: .5rem 0;
